// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render active items 1`] = `
<ul
  id="todo-list"
>
  <li
    className="todo-item"
  >
    <button
      className="finish-btn"
      onClick={[Function]}
    />
    <div
      className="item-text"
      onDoubleClick={[Function]}
    >
      active item
    </div>
    <button
      className="delete-btn"
      onClick={[Function]}
    >
      ✕
    </button>
  </li>
</ul>
`;

exports[`render all items 1`] = `
<ul
  id="todo-list"
>
  <li
    className="todo-item"
  >
    <button
      className="finish-btn finished-btn"
      onClick={[Function]}
    />
    <div
      className="item-text finished-text"
      onDoubleClick={[Function]}
    >
      completed item
    </div>
    <button
      className="delete-btn"
      onClick={[Function]}
    >
      ✕
    </button>
  </li>
  <li
    className="todo-item"
  >
    <button
      className="finish-btn"
      onClick={[Function]}
    />
    <div
      className="item-text"
      onDoubleClick={[Function]}
    >
      active item
    </div>
    <button
      className="delete-btn"
      onClick={[Function]}
    >
      ✕
    </button>
  </li>
</ul>
`;

exports[`render completed items 1`] = `
<ul
  id="todo-list"
>
  <li
    className="todo-item"
  >
    <button
      className="finish-btn finished-btn"
      onClick={[Function]}
    />
    <div
      className="item-text finished-text"
      onDoubleClick={[Function]}
    >
      completed item
    </div>
    <button
      className="delete-btn"
      onClick={[Function]}
    >
      ✕
    </button>
  </li>
</ul>
`;
